fixing alignment tests with better lasers

--- a/src/client/css/puzzles/space_fractions.less
+++ b/src/client/css/puzzles/space_fractions.less
@@ -72,22 +72,22 @@ body {
                 &.right {
                     border-top-left-radius: 40%;
                     border-bottom-left-radius: 40%;
-                    margin-left: 2px;
+                    margin-left: 3px;
                 }
                 &.left {
                     border-top-right-radius: 40%;
                     border-bottom-right-radius: 40%;
-                    margin-right: 2px;
+                    margin-right: 3px;
                 }
                 &.up {
                     border-bottom-left-radius: 40%;
                     border-bottom-right-radius: 40%;
-                    margin-bottom: 2px;
+                    margin-bottom: 3px;
                 }
                 &.down {
                     border-top-left-radius: 40%;
                     border-top-right-radius: 40%;
-                    margin-top: 2px;
+                    margin-top: 3px;
                 }
             }
         }
